--- a/src/app/admin/admin-product/admin-product.component.html
+++ b/src/app/admin/admin-product/admin-product.component.html
@@ -1,1 +1,23 @@
-<p>admin-product works!</p>
+<p>
+    <a routerLink = "/admin/products/new" class="btn btn-primary">New Product</a>
+</p>
+
+<table class="table">
+    <thead class="thead-dark">
+       <tr>
+        <th scope="col">Title</th>
+        <th scope="col">Price</th>
+        <th scope="col">Edit</th>
+       </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor ="let product of products$ | async">
+            <td>{{product.payload.val().title}}</td>
+            <td>{{product.payload.val().price}}</td>
+            <td>
+                <a [routerLink] = "['/admin/products/' , product.key]">Edit</a>
+            </td>
+
+        </tr>
+    </tbody>
+</table>
