--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -7,17 +7,26 @@
     <div class="collapse navbar-collapse" id="navbarsExampleDefault">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" routerLink="/shopping-cart">shopping cart <span class="sr-only">(current)</span></a>
+          <a class="nav-link" routerLink="/shopping-cart">shopping cart</a>
         </li>
-       
         
-        <li ngbDropdown class="nav-item dropdown ">
-          <a class="nav-link dropdown-toggle" ngbDropdownToggle id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">User Name</a>
+        <ng-template #anonymousUser>
+          <div>
+            <a class="nav-link" routerLink="/login">login</a>
+          </div>
+        </ng-template>
+        
+        <li ngbDropdown *ngIf=" appUser else anonymousUser"  class="nav-item dropdown ">
+          <a class="nav-link dropdown-toggle" ngbDropdownToggle id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            {{ appUser.name}}
+          </a>
           <div ngbDropdownMenu  class="dropdown-menu" aria-labelledby="dropdown01">
             <a class="dropdown-item" routerLink="/orders">My Orders</a>
+           <ng-container *ngIf ="appUser.isAdmin">
             <a class="dropdown-item" routerLink="/admin/orders">Manage Orders</a>
             <a class="dropdown-item" routerLink="/admin/products">Manage Products</a>
-            <a class="dropdown-item" routerLink="/admin/products">log out</a>
+           </ng-container>
+            <button class="dropdown-item" (click)="logOut()">log Out</button>
           </div>
         </li>
       </ul>
